Fix directory structure and split Makefiles

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,21 +1,15 @@
 CFLAGS=-g -c -std=c++11
 LDFLAGS=-g -lcrypto -lz
  
-all: myftp myftpd
+all: myftp
 
 myftp: myftp.o
 	g++ $(LDFLAGS) -o myftp myftp.o
 
-myftpd: myftpd.o
-	g++ $(LDFLAGS) -o myftpd myftpd.o
-
 myftp.o: myftp.cpp
 	g++ $(CFLAGS) myftp.cpp
 
-myftpd.o: myftpd.cpp
-	g++ $(CFLAGS) myftpd.cpp
-
 clean: 
-	rm -f *.o myftp myftpd
+	rm -f *.o myftp
 
 
